--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 16px;
+  line-height: 16px;
+}
+
 //* Контейнер полосы прокрутки:
 ::-webkit-scrollbar {
   width: 10px; //* - ширина полосы прокрутки.
@@ -12,30 +17,30 @@
 
 //* Стилизация дорожки под ползунком:
 ::-webkit-scrollbar-track {
-  background: #cdcdf5; //* - цвет фона у дорожки.
+  background: #99dd99; //* - цвет фона у дорожки.
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.2) inset; //* - тень у дорожки.
 }
 
 //* Стилизация ползунка:
 ::-webkit-scrollbar-thumb {
-  background: #7e7ee4; //* - цвет фона у дорожки.
+  background: #aaffaa; //* - цвет фона у дорожки.
   border-radius: 8px; //* - скругление углов.
-  border: 3px solid #cdcdf5; //* - толщина, стиль и цвет рамки.
+  border: 3px solid #99dd99; //* - толщина, стиль и цвет рамки.
 }
 
 //* Стилизация ползунка при наведении на него:
 ::-webkit-scrollbar-thumb:hover {
-  background: #1414b9; //* - ползунок меняет цвет при наведении.
+  background: #77aa77; //* - ползунок меняет цвет при наведении.
 }
 
 //* Стилизация навигационных кнопок:
 ::-webkit-scrollbar-button {
-  background-color: #cdcdf5; //* - цвет навигационных кнопок.
+  background-color: #99dd99; //* - цвет навигационных кнопок.
 }
 
 //* Стилизация навигационных кнопок при наведении на них:
 ::-webkit-scrollbar-button:hover {
-  background-color: #aaaadd; //* - цвет навигационных кнопок.
+  background-color: #aaeeaa; //* - цвет навигационных кнопок.
 }
 
 //* Дальнейшая стилизация навигационных кнопок:
@@ -48,43 +53,43 @@
 //* Стилизация верхней навигационной кнопки:
 ::-webkit-scrollbar-button:single-button:vertical:decrement {
   border-width: 0 5px 10px 5px;
-  border-color: transparent transparent #7e7ee4 transparent;
+  border-color: transparent transparent #aaffaa transparent;
 }
 
 //* Стилизация верхней навигационной кнопки при наведении:
 ::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
-  border-color: transparent transparent #1414b9 transparent;
+  border-color: transparent transparent #77aa77 transparent;
 }
 
 //* Стилизация нижней навигационной кнопки:
 ::-webkit-scrollbar-button:single-button:vertical:increment {
   border-width: 10px 5px 0 5px;
-  border-color: #7e7ee4 transparent transparent transparent;
+  border-color: #aaffaa transparent transparent transparent;
 }
 
 //* Стилизация нижней навигационной кнопки при наведении:
 ::-webkit-scrollbar-button:vertical:single-button:increment:hover {
-  border-color: #1414b9 transparent transparent transparent;
+  border-color: #77aa77 transparent transparent transparent;
 }
 
 //* Стилизация левой навигационной кнопки:
 ::-webkit-scrollbar-button:single-button:horizontal:decrement {
   border-width: 5px 10px 5px 0;
-  border-color: transparent #7e7ee4 transparent transparent;
+  border-color: transparent #aaffaa transparent transparent;
 }
 
 //* Стилизация левой навигационной кнопки при наведении:
 ::-webkit-scrollbar-button:single-button:horizontal:decrement:hover {
-  border-color: transparent #1414b9 transparent transparent;
+  border-color: transparent #77aa77 transparent transparent;
 }
 
 //* Стилизация правой навигационной кнопки:
 ::-webkit-scrollbar-button:single-button:horizontal:increment {
   border-width: 5px 0 5px 10px;
-  border-color: transparent transparent transparent #7e7ee4;
+  border-color: transparent transparent transparent #aaffaa;
 }
 
 //* Стилизация правой навигационной кнопки при наведении:
 ::-webkit-scrollbar-button:horizontal:single-button:increment:hover {
-  border-color: transparent transparent transparent #1414b9;
+  border-color: transparent transparent transparent #77aa77;
 }
