1. Fix a bug where the list,  which is necessary for filtering tasks, of tasks property values was not beautifully displayed, when this list of tasks is crowded; 2. Add the "font-family" property to the styles for the "body" tag with system fonts of the "serif" family of operating systems "Windows", "Mac OS" and "Unix/Linux"; 3. Add "font-family" property to styles for "button", "a" and "input" tags with system fonts of the "sans-serif" family of operating systems "Windows", "Mac OS" and "Unix/Linux"; 4. Change automatically one file for "firebase" hosting.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,10 @@ html {
   line-height: 16px;
 }
 
+button, a, input {
+  font-family: Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
   height: 0;
